# assessment_vokerai

./: .gitignore  pyproject.toml  requirements.txt
backend/: README.md  config.py  dependencies.py  main.py  models.py  services.py
backend/tests/: test_main.py  test_openai.py
frontend/: README.md  package-lock.json  vite.config.ts
frontend/src/: services.js  store.js
frontend/src/components/: OrderForm.svelte  OrderHistory.svelte  OrderSummary.svelte
frontend/src/routes/: +page.svelte
